[package]
name = "assert_snapshot"
version = "0.1.3"
authors = ["Amit Upadhyay <amitu@acko.com>"]
description = "rust test helper similar to jest's snapshot function"
license = "BSD-2-Clause"

[dependencies]
serde_json = "~1.0.32"
serde = "~1.0.27"
sorted-json = "~0.1.0"
failure = "~0.1.1"
itertools = "~0.7.8"
regex = "1"
